--- a/Demo_NhinHinhDoanChu/app/src/main/res/values/colors.xml
+++ b/Demo_NhinHinhDoanChu/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green">#23D10C</color>
+    <color name="red">#E41818</color>
+    <color name="blue">#465AF4</color>
+    <color name="purple">#673AB7</color>
 </resources>
