--- a/Demo_NhinHinhDoanChu/app/src/main/res/layout/activity_play_game.xml
+++ b/Demo_NhinHinhDoanChu/app/src/main/res/layout/activity_play_game.xml
@@ -9,15 +9,15 @@
     tools:context=".PlayGameActivity">
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/imgHinhCauHoi"
         android:layout_width="387dp"
         android:layout_height="240dp"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="91dp"
+        android:layout_marginTop="14dp"
         android:layout_marginEnd="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvTien"
         app:srcCompat="@drawable/hinh1">
 
     </ImageView>
@@ -31,15 +31,91 @@
         android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintTop_toBottomOf="@+id/imgHinhCauHoi" />
 
     <GridView
         android:id="@+id/gdvNhapDapAn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="412dp"
+        android:layout_height="240dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="1dp"
         android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/gdvDapAn" />
+
+    <TextView
+        android:id="@+id/tvTien"
+        android:layout_width="107dp"
+        android:layout_height="53dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="20dp"
+        android:background="@drawable/ic_tien"
+        android:fontFamily="@font/calsan"
+        android:gravity="center"
+        android:text="20"
+        android:textColor="@color/white"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imgCoinIcon"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/icon"
+        app:layout_constraintEnd_toStartOf="@id/tvTien"
+        app:layout_constraintTop_toTopOf="@id/tvTien"
+        app:layout_constraintBottom_toBottomOf="@id/tvTien"
+        android:layout_marginEnd="-30dp" />
+
+    <ImageView
+        android:id="@+id/imgHomeIcon"
+        android:layout_width="84dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="25dp"
+        android:src="@drawable/ic_home1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tvManSo"
+        android:layout_width="97dp"
+        android:layout_height="51dp"
+        android:layout_marginStart="85dp"
+        android:fontFamily="@font/calsan"
+        android:text="Màn 1"
+        android:textColor="@color/purple"
+        android:textSize="38sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@id/imgHomeIcon"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/imgHomeIcon"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <ImageView
+        android:id="@+id/imgHintIcon"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="180dp"
+        android:layout_marginBottom="25dp"
+        android:onClick="GoiY"
+        android:src="@drawable/ic_goiy"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <ImageView
+        android:id="@+id/imgNextIcon"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="25dp"
+        android:onClick="CauTiepTheo"
+        android:src="@drawable/icon_next"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="OnClick,SpeakableTextPresentCheck"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
