--- a/Demo_NhinHinhDoanChu/app/src/main/res/layout/tra_loi.xml
+++ b/Demo_NhinHinhDoanChu/app/src/main/res/layout/tra_loi.xml
@@ -12,11 +12,12 @@
         android:layout_marginStart="10dp"
         android:gravity="center"
         android:text="A"
+        android:fontFamily="@font/calsan"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        android:textSize="20sp"
+        android:textSize="24sp"
         android:textStyle="bold"
-        android:background="@color/white"
+        android:background="@color/gray"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
