--- a/Demo_NhinHinhDoanChu/app/src/main/res/layout/activity_play_game.xml
+++ b/Demo_NhinHinhDoanChu/app/src/main/res/layout/activity_play_game.xml
@@ -53,7 +53,7 @@
         android:background="@drawable/ic_tien"
         android:fontFamily="@font/calsan"
         android:gravity="center"
-        android:text="20"
+        android:text="0"
         android:textColor="@color/white"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -80,7 +80,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
+    <TextView
+        android:id="@+id/tvManSo"
+        android:layout_width="106dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="85dp"
+        android:layout_marginTop="30dp"
+        android:text="Màn 1"
+        android:textColor="@color/purple"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imgHintIcon"
